# MekongTunnel

./: .env.compose.dev.example  .env.compose.prod.example  .env.dev.example  .env.example  .env.prod.example  .gitignore  AGENTS.md  API_ANALYSIS_REPORT.md  CHANGELOG.md  CLOUD_STARTUP_PLAN.md  Dockerfile  Dockerfile.api  HANDBOOK.md  LICENSE  Makefile  PRODUCT_PLAN.md  README.md  SETUP.md  SHA256SUMS-v1.4.4.txt  SHA256SUMS-v1.4.5.txt  SHA256SUMS-v1.4.6.txt  SHA256SUMS-v1.4.7.txt  SHA256SUMS-v1.4.8.txt  SHA256SUMS-v1.4.9.txt  STRUCTURE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  install.ps1  install.sh  integrate_telegrambot.md  nextupdate.md  start-api.sh  update.sh
.github/examples/: api.env.secret.example  (+6 more)
certs/: cert.pem  key.pem
docs/: API_FLOW.md  CLI_CONTRACT.md  DISCORD_BOT.md  GITHUB_DEPLOY.md  PERFORMANCE.md  TELEGRAM_BOT.md
mekong-cli/: README.md
mekong-node-sdk/: README.md  package.json
mekong-python-sdk/: README.md
mekong-tunnel/: README.md  pyproject.toml
mekong-tunnel-vscode/: .vscodeignore  README.md  package-lock.json  package.json
mekong-tunnel/src/mekong_tunnel/: detect_port.py  find_mekong.py
mekong-tunnel/tests/: test_fastapi.py  test_sdk.py
mekong-vscode-extension/: LICENSE  README.md  package-lock.json  package.json
migrations/: 001_init.sql  002_verify_requests.sql  003_stripe_customer.sql  004_plan_configs_full.sql  005_partners.sql  006_verify_requests_v2.sql  007_subscription_plan.sql  008_notifications.sql  009_subdomain_rules.sql  010_custom_domains.sql  011_server_config.sql  011_team_owned_resources.sql  012_sponsors.sql  013_cli_device_sessions.sql  014_email_otp.sql  015_trial_newsletter.sql  016_donations.sql  017_announcement.sql  018_team_subdomain_assignments.sql  019_org_system.sql  020_org_teams.sql  021_org_workflow.sql  022_org_discount_approval.sql  023_paypal_receipts.sql  024_receipt_resubmit.sql  025_telegram_bot.sql  026_deployments.sql  027_deploy_storage_quota.sql  031_deploy_types_extended.sql
scripts/: deploy-api.sh  deploy-tunnel.sh  extract_changelog_section.sh  init-stack.sh  release-cli.sh  run-api.sh  stress-local.sh
(+157 files in other folders)
