[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mekong-tunnel"
version = "2.1.0"
description = "Framework-specific tunnel commands + Python SDK — uvicorn-mekong, flask-mekong, django-mekong and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
  { name = "Ing Muyleang", email = "muyleang@khmerstack.com" }
]
keywords = [
  "tunnel", "mekong", "localhost", "expose", "sdk",
  "uvicorn", "fastapi", "flask", "django", "gunicorn", "granian", "hypercorn"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage        = "https://mekongtunnel.dev"
Repository      = "https://github.com/MuyleangIng/MekongTunnel"
"Bug Tracker"   = "https://github.com/MuyleangIng/MekongTunnel/issues"
Changelog       = "https://github.com/MuyleangIng/MekongTunnel/releases"

[project.scripts]
uvicorn-mekong   = "mekong_tunnel.commands:uvicorn_main"
fastapi-mekong   = "mekong_tunnel.commands:fastapi_main"
flask-mekong     = "mekong_tunnel.commands:flask_main"
gunicorn-mekong  = "mekong_tunnel.commands:gunicorn_main"
django-mekong    = "mekong_tunnel.commands:django_main"
hypercorn-mekong = "mekong_tunnel.commands:hypercorn_main"
granian-mekong   = "mekong_tunnel.commands:granian_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio", "fastapi", "uvicorn", "httpx"]
